# motoman_ros1

./: .gitignore  Dockerfile  README.md  compose.yml  dependencies.txt
depend-packages/motoman/motoman_gp4_support/urdf/: gp4.urdf
lego_moveit/: CMakeLists.txt  note.md  package.xml
lego_moveit/config/: controllers_A.yaml  controllers_B.yaml  controllers_C.yaml  controllers_D.yaml  controllers_sim.yaml  random_motion_s1.json  random_motion_s2.json
lego_moveit/launch/: EAB_demo.launch  EAB_demo_SAok.launch  lego_demo.launch  lego_disable_all.launch  lego_enable_all.launch  lego_moveit_A.launch  lego_moveit_B.launch  lego_moveit_C.launch  lego_moveit_D.launch  lego_moveit_all.launch  lego_moveit_architect.launch  lego_moveit_developer.launch  lego_moveit_real.launch  lego_moveit_sim.launch  lego_random_motion.launch  lego_service_sample.launch
lego_moveit/scripts/: rosservice_disable.py  rosservice_enable.py
lego_moveit/src/: .move_for_lego.cpp.swp  .service_sample_node.cpp.swp  move_for_lego.cpp  random_motion.cpp  service_lc_node.cpp  service_sample_node.cpp
motoman_gp4_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  package.xml
motoman_gp4_moveit_config/config/: controllers.yaml  fake_controllers.yaml  gazebo_motoman_gp4.urdf  joint_limits.yaml  motoman_gp4.srdf  ompl_planning.yaml
motoman_gp4_moveit_config/default_warehouse_mongo_db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-2-293224763190697715.wt  index-3-293224763190697715.wt  sizeStorer.wt
motoman_gp4_moveit_config/default_warehouse_mongo_db/diagnostic.data/: metrics.2023-07-11T17-29-14Z-00000  metrics.2023-07-11T17-29-48Z-00000  metrics.2023-07-11T18-21-43Z-00000  metrics.2023-07-11T18-47-11Z-00000  metrics.2023-07-11T19-01-37Z-00000  metrics.2023-07-11T19-32-43Z-00000  metrics.2023-07-11T19-32-51Z-00000  metrics.2023-07-11T19-34-14Z-00000  metrics.2023-07-11T19-59-55Z-00000  metrics.2023-07-11T20-13-44Z-00000  metrics.2023-07-11T20-46-59Z-00000  metrics.2023-07-11T21-04-59Z-00000  metrics.2023-07-11T21-10-15Z-00000  metrics.2023-07-11T21-12-20Z-00000  metrics.2023-07-11T21-13-05Z-00000  metrics.2023-07-11T21-14-31Z-00000  metrics.2023-07-11T21-15-15Z-00000  metrics.2023-07-11T21-25-14Z-00000  metrics.2023-07-12T14-25-05Z-00000  metrics.2023-07-12T14-41-10Z-00000  metrics.2023-07-12T14-49-05Z-00000  metrics.2023-07-12T14-54-35Z-00000  metrics.2023-07-12T15-07-17Z-00000  metrics.2023-07-12T15-18-10Z-00000  metrics.2023-07-12T15-22-07Z-00000  metrics.2023-07-12T15-33-27Z-00000  metrics.2023-07-12T16-20-49Z-00000  metrics.2023-07-12T16-22-23Z-00000  metrics.2023-07-12T16-33-46Z-00000  metrics.2023-07-12T21-29-20Z-00000  metrics.2023-07-12T21-32-44Z-00000  metrics.2023-07-13T19-22-27Z-00000  metrics.2023-07-13T19-23-45Z-00000  metrics.2023-07-13T19-37-40Z-00000  metrics.2023-07-13T19-39-36Z-00000  metrics.2023-07-13T19-41-04Z-00000  metrics.2023-07-13T19-42-29Z-00000  metrics.2023-07-13T19-44-34Z-00000  metrics.2023-07-13T21-08-13Z-00000  metrics.2023-07-13T21-08-45Z-00000  (+140 more)
motoman_gp4_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  motoman_gp4_moveit_controller_manager.launch.xml  move_group.launch  moveit-no-rviz.launch  moveit.rviz  moveit_planning_execution.launch  moveit_planning_execution_copy.launch  moveit_rviz.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml  warehouse.launch
motoman_gp4_moveit_config/launch/extras/: gazebo.launch  move_group.launch  run_benchmark_ompl.launch
testbed_utils/: CMakeLists.txt  package.xml
testbed_utils/config/: controllers_A.yaml  controllers_B.yaml  controllers_sim1.yaml
testbed_utils/launch/: MD_demo.launch  testA.launch  testD.launch
testbed_utils/launch/demos/: MD_demo.launch  testA.launch  testD.launch
testbed_utils/launch/lego_moveit/: lego_get_pose.launch  lego_moveit_yk.launch  lego_random_motion.launch
yk_launch/: CMakeLists.txt  package.xml
yk_launch/config/: controllers_C.yaml  controllers_sim2.yaml
yk_launch/launch/: moveit.launch
yk_msgs/: CMakeLists.txt  package.xml
yk_msgs/action/: ExecuteCartesianTrajectory.action  ExecuteCartesianTrajectoryFT.action  GoToPose.action
yk_msgs/srv/: ExecuteCartesianTrajectory.srv  SetJoints.srv  SetPose.srv  SetPoseFT.srv
yk_pub/: CMakeLists.txt  package.xml
yk_pub/config/: gp4.json
yk_pub/include/: yk_publisher.h
yk_pub/src/: main.cpp  utils.cpp  yk_publisher.cpp
yk_tasks/: CMakeLists.txt  package.xml
yk_tasks/action/: GoToJoints.action  GoToPose.action
yk_tasks/config/: controllers_C.yaml  controllers_D.yaml
yk_tasks/include/: yk_interface.h
yk_tasks/launch/: disable_all.launch  enable_all.launch  move_A.launch  move_B.launch  move_C.launch  move_C_2.launch  move_D.launch  move_all.launch  move_real.launch  move_sim.launch  random_motion.launch  service_sample.launch
yk_tasks/scripts/: rosservice_disable.py  rosservice_enable.py
yk_tasks/scripts/test_ft_cartesian_trajectory_action/: test_traj_execution.py  test_traj_execution_ft_screw.py  test_traj_execution_ft_slide.py
yk_tasks/scripts/test_ft_set_pose_service/: test_find_edge_x.py
yk_tasks/src/: main.cpp  random_motion.cpp  service_sample_node.cpp  yk_interface.cpp
yk_tasks/srv/: GetPoseStamped.srv  SetPoseFT.srv
