<?xml version="1.0"?>
<package format="2">
  <name>yk_msgs</name>
  <version>0.0.0</version>
  <description>Messages for YK</description>

  <author email="shobhit@cmu.edu">Shobhit Aggarwal</author>
  <maintainer email="shobhit@cmu.edu">Shobhit Aggarwal</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
